src/App.css
/* .container {
    max-width: 670 px;
    margin: 0 auto;
} */
@font-face {
    font-family: circular-book;
    src: url(./fonts/Rubik-Regular.ttf);
}
@font-face {
    font-family: circular-bold;
    src: url(./fonts/Rubik-Bold.ttf);
}
@font-face {
    font-family: circular-black;
    src: url(./fonts/Rubik-Black.ttf);
}
.uppercase {
    text-transform: uppercase;
}
.smallText {
    font-size: 0.75rem;
    letter-spacing: 0.8px;
}
.smallText.bold {
    font-weight: 600;
}
* {
    box-sizing: border-box;
}
body {
    font-family: circular-book;
}
.subText {
    font-size: 0.9rem;
    color: #b3b3b3;
}
.App {
    height: calc(100vh - 0px);
    background: #131313;
    display: flex;
}
.navBar {
    width: 260px;
    height: 100%;
    background: #540c7d;
    padding: 10px 10px 0;
    display: flex;
    flex-direction: column;
}
.navBar .logo {
    padding: 1rem 0.8rem;
}
.navBar .logo svg {
    max-width: 130px;
    max-height: 130px;
}
.navBar .logo svg p {
    fill: white;
}
.navBar ul {
    margin: 0;
    padding: 0;
}
.navBar ul a {
    color: inherit;
    text-decoration: none;
}
.navBar ul a:visited {
    color: inherit;
    text-decoration: none;
}
.navBar ul a {
    color: #b3b3b3;
    list-style-type: none;
    border-radius: 5px;
    padding: 0.5rem 0.8rem;
    font-size: 0.9rem;
    cursor: pointer;
    transition: all 0.3s ease-in-out;
    font-family: circular-bold;
    display: flex;
    align-items: center;
}
.navBar ul a svg {
    fill: currentColor;
    margin-right: 15px;
}
.navBar ul a.active {
    background: #282828;
    color: white;
}
.navBar ul a.active svg {
    fill: white;
}
.navBar ul a:hover {
    color: white;
}
.navBar .cookies {
    font-size: 0.6rem;
    color: #b3b3b3;
    text-align: center;
    margin-top: auto;
    padding: 1rem;
}
.navBar .cookies span {
    display: block;
}
.outerWrap {
    background: grey;
    height: 100vh;
    min-height: 100%;
}

.main {
    width: 100%;
    overflow-y: scroll;
    position: relative;
    padding-top: 3.4rem;
}
.main .mainContent {
    color: white;
}
.main .mainContent .mainInner {
    padding: 0.5rem 2rem;
}
.main .mainContent h1, .main .mainContent h2 {
    font-size: 1.8rem;
}

.playIcon {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    overflow: hidden;
    display: flex;
    background: #1db954;
    margin-left: auto;
    opacity: 0;
    position: absolute;
    right: 1.2rem;
    bottom: 1.2rem;
}
.playIcon svg {
    margin: auto;
}
.playlistPage {
    background-color: #d6d6d6;
}
.playlistPage .mainInner {
    background-image: 
    -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), 
    color-stop(40%, #121212));
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), #121212 0%);
    width: 100%;
    display: flex;
    flex-direction: column;
}
.playlistPage .playlistPageInfo {
    text-align: center;
    padding: 1.5rem 0;
    display: flex;
}
.playlistPage .playlistPageInfo .playlistPageImage {
    width: 250px;
    height: 250px;
}
.playlistPage .playlistPageInfo .playlistPageImage img {
    height: 100%;
    width: 100%;
    object-fit: cover;
    -webkit-box-shadow: 0 4px 60px rgba(0, 0, 0, 0.5);
    box-shadow: 0 4px 60px rgba(0, 0, 0, 0.5);
}
.playlistPage .playlistPageSongs {
    height: 100%;
}
.playlistPage .playlistPageSongs .playlistButtons {
    display: flex;
    align-items: center;
}
.playlistPage .playlistPageSongs .playIcon {
    opacity: 1;
    position: relative;
    margin-left: 0;
    height: 56px;
    width: 56px;
    right: 0;
    bottom: 0;
}
.playlistPage .playlistPageSongs .playIcon svg {
    height: 26px;
    width: 26px;
}
.playlistPage .playlistPageSongs .icons .icon {
    margin-left: 1.5rem;
}
.playlistPage .playlistPageSongs .icons .iconsHeart {
    width: 28px;
    height: 28px;
}
.playlistPage .playlistPageSongs .icons .iconsHeart svg {
    fill: white;
}
.playlistPage .playlistPageContent {
    text-align: left;
    padding: 1.5rem 2rem;
}
.playlistPage .playlistPageContent h1 {
    font-size: 7rem;
    margin: 0;
    line-height: 1;
    font-family: circular-black;
    word-spacing: -18px;
    letter-spacing: -6px;
}
.playlistPage .playlistPageContent .tagline {
    font-size: 0.9rem;
    opacity: 0.7;
    margin-bottom: 0.5rem;
}
.playlistPage .playlistPageContent .playlistPageDesc {
    display: flex;
    align-items: center;
    font-size: 0.9rem;
}
.playlistPage .playlistPageContent .playlistPageDesc p {
    margin: 0;
}
.playlistPage .playlistPageContent .playlistPageDesc span {
    opacity: 0.7;
    position: relative;
    padding-left: 20px;
}
.playlistPage .playlistPageContent .playlistPageDesc span:before {
    content: '';
    width: 4px;
    height: 4px;
    background: white;
    overflow: hidden;
    border-radius: 50%;
    position: absolute;
    margin-left: -10px;
    top: 9px;
}
ul.songList {
    padding: 0;
}
ul.songList li {
    list-style-type: none;
    width: 100%;
    padding: 0.8rem;
    /* display: flex; */
    align-items: center;
    transition: background 0.2s ease-in-out;
}
ul.songList li:hover {
    background: rgba(255, 255, 255, 0.1);
}
ul.songList li:hover .songIcon .noteI {
    display: none;
}
ul.songList li:hover .songIcon .playI {
    display: block;
}
ul.songList li .songDetails h3 {
    margin: 0;
    font-weight: 300;
    font-size: 1rem;
}
ul.songList li .songDetails span {
    color: rgba(255, 255, 255, 0.7);
    font-size: 0.9rem;
}
ul.songList li .songTime {
    margin-left: auto;
}
ul.songList li .songIcon {
    padding-right: 1rem;
}
ul.songList li .songIcon .playI {
    display: none;
}
ul.songList li .songIcon svg {
    fill: rgba(255, 255, 255, 0.7);
    width: 25px;
    height: 40px;
}

.parent {
    display: grid;
    grid-template-columns: 1fr 10fr repeat(2, 1fr);
    grid-template-rows: 0,5fr;
    grid-column-gap: 10px;
    grid-row-gap: px;
    }

@media screen and (max-width: 414px) {
    ul.songList li .songIcon .noteI {
        display: none;
    }

    ul.songList li .songIcon .playI {
        display: block;
    }

    .main .mainContent .mainInner {
        padding: 0rem 0rem;
    }

    .navBar {
        width: 90px;
        height: 100%;
        background: #540c7d;
        padding: 5px 5px 5px 5px;
        display: flex;
        flex-direction: column;
    }
    
    .navBar ul a {
        color: #b3b3b3;
        list-style-type: none;
        border-radius: 5px;
        padding: 0.5rem 0.8rem;
        font-size: 0rem;
        cursor: pointer;
        transition: all 0.3s ease-in-out;
        font-family: circular-bold;
        display: flex;
        align-items: center;
        padding-left: 25px;
    }

}

